align bug

--- a/stylesheets/pages/home.scss
+++ b/stylesheets/pages/home.scss
@@ -43,6 +43,7 @@ Keyframes
   position: absolute;;
   z-index: 1;
   width: 70%;
+  align-self: center;
   margin: auto;
   max-width: 900px;
   -webkit-animation:fadeIn ease-in 1;
